--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "js-cookie": "^2.2.1",
     "register-service-worker": "^1.6.2",
+    "vant": "^2.2.5",
     "vue": "^2.6.10",
+    "vue-feedback": "^1.1.2",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
@@ -24,6 +28,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   }
