--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "js-cookie": "^2.2.1",
-    "register-service-worker": "^1.6.2",
     "vant": "^2.2.5",
     "vue": "^2.6.10",
     "vue-feedback": "^1.1.2",
@@ -26,13 +25,13 @@
     "@babel/register": "^7.6.2",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-plugin-pwa": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "connect": "^3.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "glob": "^7.1.5",
     "lint-staged": "^9.4.2",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.9.0",
