--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "fastclick": "^1.0.6",
     "js-cookie": "^2.2.1",
     "register-service-worker": "^1.6.2",
     "vant": "^2.2.5",
@@ -30,9 +31,13 @@
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.12.2",
+    "compression-webpack-plugin": "^3.0.0",
     "connect": "^3.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "lint-staged": "^9.4.2",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.9.0",
@@ -43,6 +48,7 @@
     "script-ext-html-webpack-plugin": "^2.1.4",
     "svg-sprite-loader": "^4.1.6",
     "svgo": "^1.3.0",
+    "vconsole": "^3.3.4",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
