--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
     "fastclick": "^1.0.6",
     "js-cookie": "^2.2.1",
+    "nprogress": "^0.2.0",
     "register-service-worker": "^1.6.2",
     "vant": "^2.2.5",
     "vue": "^2.6.10",
     "vue-feedback": "^1.1.2",
     "vue-router": "^3.0.3",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
