--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^9.4.2",
     "mockjs": "^1.0.1-beta3",
-    "node-sass": "^4.9.0",
     "plop": "^2.5.2",
     "postcss-px-to-viewport": "^1.1.1",
     "runjs": "^4.4.2",
+    "sass": "^1.32.8",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "svg-sprite-loader": "^4.1.6",
